--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,191 @@
 header nav {
-    display: inline-block;
-    float: right;
+  /* display: inline-block; */
+  float: right;
 }
 header nav a {
-    margin: 40px;
+  margin: 40px;
 }
 #company-name {
-    font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
+  color: #1e2019;
 }
 header {
-    background-color: #E0D8B0;
+  background-color: #eb6524;
+  padding: 8px 10%;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  margin: auto;
+  background-color: #ebf2fa;
 }
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: #1e2019;
 }
 #par-1 {
-    background-color: #E0D8B0;   
+  background-color: #eb6524;
+  padding: 96px 10%;
+  display: flex;
+  justify-content: space-between;
+}
+#b1 {
+  background-color: #485696;
+  border: 2px solid #485696;
+  color: white;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  margin-right: 8px;
+}
+#b1:hover {
+  background-color: #323b67;
+  color: white;
+}
+#b1:active {
+  background-color: #232947;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+#b2 {
+  background-color: #eb6524;
+  border: 2px solid #485696;
+  color: white;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+#b2:hover {
+  background-color: #ca481a;
+  color: white;
+}
+
+#b2:active {
+  background-color: #b14017;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+img {
+  border-radius: 50%;
+}
+#par-2 {
+  padding: 96px 10%;
+  display: flex;
+  justify-content: space-between;
+}
+p {
+  max-width: auto;
+}
+#pic-2 {
+  margin-right: 256px;
+}
+#b3 {
+  background-color: #eb6524;
+  border: 2px solid #485696;
+  color: white;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+#b3:hover {
+  background-color: #ca481a;
+  color: white;
+}
+
+#b3:active {
+  background-color: #b14017;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+#page-3 {
+  text-align: center;
+}
+#page-3-top {
+  text-align: center;
+}
+.cards {
+  display: flex;
+  justify-content: space-around;
+}
+#par-3 {
+  padding: 96px 10%;
+  display: flex;
+  background-color: #485696;
+}
+#proper {
+  margin-right: 200px;
+}
+#bb-1 {
+  border: 2px solid #485696;
+  color: #eb6524;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+#bb-2 {
+  border: 2px solid #485696;
+  color: #eb6524;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+#subscribe-button {
+  background-color: #eb6524;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+form {
+  display: flex;
+}
+#proper h1 {
+  color: #ebf2fa;
+}
+#proper p {
+  color: #ebf2fa;
+}
+.menu-bottom {
+  display: flex;
+  flex-direction: column;
+}
+.menu-bottom a {
+  margin-bottom: 12px;
+}
+footer {
+  background-color: #eb6524;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 10%;
+}
+footer p {
+  margin-top: 0px;
+}
+.cards > div {
+  border: 2px solid #485696;
+  border-radius: 12px;
+  padding: 96px;
+  margin: 94px 12px;
+  text-align: center;
+  color: #485696;
+  font-weight: 700;
+  font-style: italic;
+  font-family: monospace;
+}
+.cards div img {
+  width: 200px;
+  margin-bottom: 32px;
+}
+.cards {
+  justify-content: center;
+}
+.cards > div:nth-child(2) {
+  border-color: #eb6524;
 }
